--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,7 @@
   </js-module>
 
   <platform name="android">
+    <framework src="net.sourceforge.streamsupport:android-retrofuture:1.7.3"/>
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="LocalDevices">
