fix: add DeviceSettings.java to schema

--- a/plugin.xml
+++ b/plugin.xml
@@ -34,5 +34,6 @@
     <source-file src="src/android/Device.java" target-dir="src/com/arystankaliakparov/cordova_plugin_local_devices/"/>
     <source-file src="src/android/RecognizeDevice.java" target-dir="src/com/arystankaliakparov/cordova_plugin_local_devices/"/>
     <source-file src="src/android/Utils.java" target-dir="src/com/arystankaliakparov/cordova_plugin_local_devices/"/>
+    <source-file src="src/android/DeviceSettings.java" target-dir="src/com/arystankaliakparov/cordova_plugin_local_devices/"/>
   </platform>
 </plugin>
