fix: add custom gradle

--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,7 @@
   </js-module>
 
   <platform name="android">
+    <framework src="src/android/plugin.gradle" custom="true" type="gradleReference" />
     <framework src="net.sourceforge.streamsupport:android-retrofuture:1.7.3"/>
     <framework src="com.izettle:html2bitmap:1.9"/>
     <framework src="com.github.DantSu:ESCPOS-ThermalPrinter-Android:2.0.10"/>
